# tmnd

./: .env.example  CONTRIBUTING.md  README.md  manage.py  pyproject.toml
tmnd/config/: asgi.py  settings.py  urls.py  wsgi.py
tmnd/core/: models.py
