[project]
name = "tmnd"
version = "0.1.0"
description = "TheMixNeverDies.com"
authors = [
    { name = "Nik Kantar", email = "nik@nkantar.com" }
]
dependencies = [
    "django>=5.0.7",
    "django-allauth[socialaccount]>=0.63.6",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
